--- a/01- Supervised Learning - Classification - Logistic Regression -Binary(Solution)_st122097_thantham.ipynb
+++ b/01- Supervised Learning - Classification - Logistic Regression -Binary(Solution)_st122097_thantham.ipynb
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,10 +518,10 @@
     "        self.actual = actual\n",
     "        self.predict = predict\n",
     "        \n",
-    "        self.TP = sum((self.actual == 1) & (self.predict == 1)) # True Positive (correct prediction)\n",
-    "        self.TN = sum((self.actual == 0) & (self.predict == 0)) # True Negative (correct prediction)\n",
-    "        self.FN = sum((self.actual == 1) & (self.predict == 0)) # False Negative (Predict as No, but actually Yes)\n",
-    "        self.FP = sum((self.actual == 0) & (self.predict == 1)) # False Positive (Predict as Yes, but actually No)\n",
+    "        self.TP = ((self.actual == 1) & (self.predict == 1)).sum() # True Positive (correct prediction)\n",
+    "        self.TN = ((self.actual == 0) & (self.predict == 0)).sum() # True Negative (correct prediction)\n",
+    "        self.FN = ((self.actual == 1) & (self.predict == 0)).sum() # False Negative (Predict as No, but actually Yes)\n",
+    "        self.FP = ((self.actual == 0) & (self.predict == 1)).sum() # False Positive (Predict as Yes, but actually No)\n",
     "        \n",
     "    def accuracy(self):\n",
     "        # Accuracy = (TP+TN)/(TP+TN+FN+FP)\n",
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
