--- a/01- Supervised Learning - Classification - Logistic Regression -Binary(Solution)_st122097_thantham.ipynb
+++ b/01- Supervised Learning - Classification - Logistic Regression -Binary(Solution)_st122097_thantham.ipynb
@@ -578,6 +578,7 @@
     "        self.f1 = 2 * self.precision * self.recall / (self.precision + self.recall)\n",
     "        return self.f1\n",
     "    \n",
+    "    # ADDITIONAL FUNCTION TO SIMPLY PRINTING METRICS\n",
     "    def show_metrics(self):\n",
     "        print('Model Evaluation')\n",
     "        print(f'Evaluation - Accuracy : {self.accuracy()} %')\n",
